fix "social" alignment

--- a/Nettside_Main/main.css
+++ b/Nettside_Main/main.css
@@ -120,12 +120,16 @@ h3 {
 #facebook {
     height: 100px;
     position: relative;
+    padding-left: 10px;
+    padding-right: 10px;
     fill: #ffffff;
 }
 
 #instagram {
     height: 100px;
     position: relative;
+    padding-left: 10px;
+    padding-right: 10px;
     fill: #ffffff;
 }
 
